# shcs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.v1.toml  v1.shcs.toml
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/server/src/v1/: bearer_password.rs  bearer_token.rs  config.rs  error.rs  metadata.rs  mod.rs  upload_body.rs
crates/server/src/v1/sdk/: api.rs  mod.rs  operation.rs  params.rs
crates/storage/: .gitignore  Cargo.toml
crates/storage/src/: bucket.rs  config.rs  constants.rs  dotfile.rs  error.rs  item.rs  lib.rs  metadata.rs  storage.rs  tests.rs
src/: lib.rs  main.rs
