[package]
name = "shcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/*"]

[workspace.dependencies]
actix-multipart = "0.6.0"
actix-files = "0.6.2"
actix-web = "4.4.0"

serde = { version = "1.0.144", features = ["derive"] }

[dependencies]
actix-web.workspace = true

dotenvy = "0.15.7"

server = {path="crates/server"}
storage = {path="crates/storage"}