[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.4.0"
serde_json = "1.0"

actix-web.workspace = true
actix-files.workspace = true
actix-multipart.workspace = true
serde.workspace = true

storage = {path="../storage"}