[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
serde_yaml = "0.9.19"
nanoid = "0.4.0"
tempfile = "3.5.0"

actix-multipart.workspace = true
serde.workspace = true